# ggvm

./: .gitignore  Cargo.toml  README.md  a.go  bnf  get-arg.s  main.go  randInt.go  runtime-sigpanic-called-from-ax.s  test.sh  two-call.s  x.go
.github/workflows/: rust.yml
compiler/: Cargo.toml  a.gg  call.gg
compiler/src/: lib.rs
compiler/src/analyze/: mod.rs
compiler/src/codegen/: mod.rs
compiler/src/go_assembly/: mod.rs
compiler/src/go_assembly/directive/: jmp_target.rs  mod.rs
compiler/src/go_assembly/operand/: mod.rs
compiler/src/go_assembly/register_with_offset/: mod.rs  register.rs
compiler/src/go_assembly/snapshots/: compiler__go_assembly__insta__asm_operand-2.snap  compiler__go_assembly__insta__asm_operand-2.snap.new  compiler__go_assembly__insta__asm_operand-3.snap  compiler__go_assembly__insta__asm_operand-3.snap.new  compiler__go_assembly__insta__asm_operand.snap  compiler__go_assembly__insta__asm_operand.snap.new  compiler__go_assembly__insta__go_assembly.snap  compiler__go_assembly__insta__go_assembly.snap.new  compiler__go_assembly__insta__go_assembly_kind-2.snap  (+29 more)
compiler/src/link/: base.go  mod.rs
core/position/: Cargo.toml
core/position/src/: lib.rs  terminal.rs
example-irs/: add.gg
go_and_asm/: a.go  a.s  b.go  b.s  c.go  c.s  d.go  d.s
go_ast/: Cargo.toml
go_ast/src/: lib.rs
go_ast/src/snapshots/: go_ast__tests__inst_rand_intn.snap.new
p9_asm_macro/: Cargo.toml
p9_asm_macro/src/: lib.rs
src/: main.rs
tests/: .gitignore  Makefile  aaaa  func_amd64.s  go.sum  link.go  main.go
(+48 files in other folders)
