[package]
name = "ggvm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p9-asm = { path = "./p9_asm_macro" }
compiler = { path ="./compiler" }
go_ast = {path = "./go_ast"}

[workspace]
members =[
    "p9_asm_macro",
    "go_ast"
]

[dev-dependencies]
insta = "1.12.0"
